@@ -17,14 +17,17 @@
  */
 package org.apache.ivyde.eclipse.ui.actions;
 
-import org.apache.ivyde.eclipse.cpcontainer.IvyClasspathUtil;
+import org.apache.ivyde.eclipse.IvyPlugin;
+import org.apache.ivyde.eclipse.cpcontainer.IvyClasspathContainerConfiguration;
+import org.apache.ivyde.eclipse.ui.NewIvyDEContainerWizard;
 import org.eclipse.core.resources.IFile;
-import org.eclipse.core.runtime.IPath;
+import org.eclipse.jdt.core.IClasspathEntry;
 import org.eclipse.jdt.core.IJavaProject;
 import org.eclipse.jdt.core.JavaCore;
 import org.eclipse.jface.action.IAction;
 import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.IStructuredSelection;
+import org.eclipse.jface.wizard.WizardDialog;
 import org.eclipse.ui.IWorkbenchWindow;
 import org.eclipse.ui.IWorkbenchWindowActionDelegate;
 import org.eclipse.ui.PlatformUI;
@@ -38,12 +41,6 @@ public class CreateContainerAction implements IWorkbenchWindowActionDelegate {
     public CreateContainerAction() {
     }
 
-    /**
-     * The action has been activated. The argument of the method represents the 'real' action
-     * sitting in the workbench UI.
-     * 
-     * @see IWorkbenchWindowActionDelegate#run
-     */
     public void run(IAction action) {
         ISelection sel = PlatformUI.getWorkbench().getActiveWorkbenchWindow().getSelectionService()
                 .getSelection();
@@ -52,39 +49,25 @@ public class CreateContainerAction implements IWorkbenchWindowActionDelegate {
             Object o = s.getFirstElement();
             if (o instanceof IFile) {
                 IFile f = (IFile) o;
-
-                addCPContainer(JavaCore.create(f.getProject()), f.getProjectRelativePath(), "*");
+                IJavaProject javaProject = JavaCore.create(f.getProject());
+                IvyClasspathContainerConfiguration conf = new IvyClasspathContainerConfiguration(
+                        javaProject, f.getProjectRelativePath().toString(), false);
+                IClasspathEntry entry = JavaCore.newContainerEntry(conf.getPath());
+                WizardDialog dialog = new WizardDialog(IvyPlugin.getActiveWorkbenchShell(),
+                        new NewIvyDEContainerWizard(javaProject, entry));
+                dialog.open();
             }
         }
     }
 
-    private void addCPContainer(IJavaProject project, IPath projectRelativePath, String confs) {
-        IvyClasspathUtil.addCPContainer(project, projectRelativePath, confs);
-    }
-
-    /**
-     * Selection in the workbench has been changed. We can change the state of the 'real' action
-     * here if we want, but this can only happen after the delegate has been created.
-     * 
-     * @see IWorkbenchWindowActionDelegate#selectionChanged
-     */
     public void selectionChanged(IAction action, ISelection selection) {
+        // nothing to change
     }
 
-    /**
-     * We can use this method to dispose of any system resources we previously allocated.
-     * 
-     * @see IWorkbenchWindowActionDelegate#dispose
-     */
     public void dispose() {
+        // nothing to dispose
     }
 
-    /**
-     * We will cache window object in order to be able to provide parent shell for the message
-     * dialog.
-     * 
-     * @see IWorkbenchWindowActionDelegate#init
-     */
     public void init(IWorkbenchWindow window) {
         this.window = window;
     }
